@@ -1,8 +1,9 @@
 gforge (3.1-3+) unstable; urgency=low
 
-  * 
+  * [Christian] corrected stupid chmod error in user_dump_update.pl
+  that was making unwritable htdocs dir to the group
 
- -- Roland Mas <lolando@debian.org>  Tue,  4 Nov 2003 23:32:15 +0100
+ -- Christian Bayle <bayle@debian.org>  Fri,  7 Nov 2003 00:01:09 +0100
 
 gforge (3.1-3) unstable; urgency=low
 
